--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,27 @@ project(CFS_SCH C)
 include_directories(fsw/public_inc)
 include_directories(fsw/mission_inc)
 include_directories(fsw/platform_inc)
+include_directories(fsw/src)
+include_directories(${ci_MISSION_DIR}/fsw/platform_inc)
+include_directories(${to_MISSION_DIR}/fsw/platform_inc)
+include_directories(${hk_MISSION_DIR}/fsw/platform_inc)
+include_directories(${fm_MISSION_DIR}/fsw/platform_inc)
+include_directories(${lc_MISSION_DIR}/fsw/platform_inc)
+include_directories(${md_MISSION_DIR}/fsw/platform_inc)
+include_directories(${mm_MISSION_DIR}/fsw/platform_inc)
+include_directories(${sc_MISSION_DIR}/fsw/platform_inc)
+include_directories(${cf_MISSION_DIR}/fsw/platform_inc)
+include_directories(${cs_MISSION_DIR}/fsw/platform_inc)
+include_directories(${ds_MISSION_DIR}/fsw/platform_inc)
+include_directories(${hs_MISSION_DIR}/fsw/platform_inc)
 
 aux_source_directory(fsw/src APP_SRC_FILES)
 
 # Create the app module
 add_cfe_app(sch ${APP_SRC_FILES})
+
+if (COMMAND add_cfe_tables)
+    include_directories(fsw/tables)
+    aux_source_directory(fsw/tables APP_TBL_FILES)
+    add_cfe_tables(sch ${APP_TBL_FILES})
+endif(COMMAND add_cfe_tables)
